--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -1,3 +1,4 @@
+/*
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: medium;
@@ -71,3 +72,4 @@ body {
 .userActionLinksContainer a {
 	margin-left: 0.3em;
 }
+*/
