Started adding dynamic parameter and header editing on the components form.

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -3,3 +3,14 @@
 Author styles go here.
 
 */
+
+label.inline {
+	display: inline;
+}
+
+label.wider {
+	width: 50px;
+	text-align: right;
+	float: left;
+	padding-right: 5px;
+}
