Continued development on dynamically adding name/value pairs to the components form.

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -15,6 +15,14 @@ label.wider {
 	padding-right: 5px;
 }
 
+.link {
+	cursor: pointer;
+}
+
 .htmlTemplate {
 	display: none;
+}
+
+.nameValuePairContainer {
+	margin-bottom: 5px;
 }
