Continued development on dynamically adding name/value pairs to the components form.

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -4,7 +4,7 @@ Author styles go here.
 
 */
 
-label.inline {
+.inline {
 	display: inline;
 }
 
@@ -17,6 +17,10 @@ label.wider {
 
 .link {
 	cursor: pointer;
+}
+
+.formError {
+	display: none;
 }
 
 .htmlTemplate {
